# TA

./: .gitignore  README.md
lab1/: CMakeLists.txt  Makefile  README.md  check_string.h  main.cpp  pure_flex.flex  regex_constructor.cpp  regex_constructor.h  regex_generator.cpp  regularochka.cpp  rgx_lexer.l  script.sh  std_regex_main.cpp  std_script.sh
lab1/flex/: CMakeLists.txt  flex_regex.cpp  flex_regex.h  rgx_lexer.l
lab1/regex_constructor/: regex_constructor.h
lab1/regex_gen/: CMakeLists.txt  regex_gen.cpp  regex_gen.h
lab1/smc/: .gitignore  AppClass.cpp  AppClass.h  AppClass.sm  CMakeLists.txt  Makefile
lab1/std_regex/: CMakeLists.txt  std_regex.cpp  std_regex.h
lab1/tests/: tests_cpp
lab2/: CMakeLists.txt  README.md  graph.dot  huinya.h  main.cpp  regex1  regex2
lab3/: CMakeLists.txt  GRAMMAR.txt  PROGRAM.pgm  flex_main.cpp  lexer-huexer.l  test.pgm
